# 0project-YTArchive

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  cli_missing_functions.py  config.toml.example  main.py  pyproject.toml  pytest.ini  ytarchive.py
Planning/: ArchitectureDecisions.md  ArchitectureGuide.md  ArchitectureQuestions.md  CHANGELOG.md  DeferredDesignDetails.md  FutureFeatures.md  ImplementationGuide.md  ImplementationPlan.md  InitiativeReviewProcessSummary.md  Insights.md  PRD.md  ProjectManagerReviewProcess.md  ProjectQuestions.md  ProjectStatusUpdatesGuide.md  PythonAPI_Project_Workflow_Guide.md  Questions.md  RecurringIssuesLog.md  StartNewProjectHere.md  feedback_architect_template.md  feedback_projectmanager_template.md
cli/: __init__.py  main.py
docs/: api-documentation.md  configuration-reference.md  deployment-guide.md  development-guide.md  docs-maintenance.md  testing-guide.md  user-guide.md
jobs/: 031f1573-c70d-4fb6-9dd8-f84293351cef.json  03323d9a-a0c1-4fbc-8112-cf376535ed70.json  042d68af-6877-43f0-97b7-27251b904664.json  044d3644-db73-40ec-890b-f489b5f9a148.json  05149f72-6763-4343-869b-0114a3be3235.json  052ea4e9-4701-4857-99f5-c9793617488e.json  05f24744-3140-4940-9253-56b64a260898.json  0948e69a-5e9c-4c30-80db-b00745ade825.json  09835e0b-2844-4dce-8e6a-366562c656a4.json  0b331168-2d1d-4716-bb9e-84b86ecb9903.json  0bf6fe18-4b73-4546-bc33-ac005d5bd7b7.json  0c285106-13d1-4852-951b-dfbbf867fdce.json  0cf5fe7a-effa-4faa-82be-306105224ea2.json  0d9dcb92-6e1c-494b-8c1b-1a1badd6411e.json  104a3fb6-4c5b-4348-952b-3886b0a721ef.json  10e84367-7329-4aff-b852-63091ac7f0cd.json  11e8d861-9c33-4ed2-8d84-497e8acacb61.json  1441a4c7-16b5-4469-90c5-28278bcb9e3d.json  151c342e-5d57-48f6-bb3e-26712f1ee35b.json  1a15fc4c-5dc0-4b6c-b8f9-65e4161a5ad9.json  1c84ba39-0103-45a7-90f9-c6616152b99f.json  1cea304e-7186-42a4-9cb9-8975b038f185.json  1d37c59f-cf80-4313-b66c-ac8c9d7ced7c.json  1edc7f28-971f-4751-9bbf-c8b1957ffbf9.json  2044a253-76ba-4cad-8939-38105883549d.json  20db2151-fdc5-4afd-a560-662de72da6b1.json  20e2be59-b800-4fe2-b7d3-2c179af94679.json  22268dbc-256b-49ff-ac55-0fb1fde03c8d.json  228df939-5848-473d-99cb-a20f2d8cedaf.json  25d74564-4e25-413c-9188-c52d45f68e52.json  266f28ee-f952-4611-aa41-2bc6518cf8f7.json  26a15df0-b95e-4192-a199-630dfd550a34.json  270ab364-88df-4b67-a3c7-2e212444dcff.json  2727ffb2-6293-4d63-8440-5374df6eb97a.json  28e83ede-81f7-4791-93a1-aaba8b18b571.json  2a52a9aa-b135-4449-a206-e76c9d685d0c.json  2b681436-e527-4fdf-a46c-376dada22b97.json  2ba02996-8a82-4313-b44b-d04581404786.json  2df831c4-4847-4b9a-b17a-0089f8c1b330.json  2e213e2a-22a6-4190-9125-7c766149d96d.json  (+192 more)
playlist_results/: playlist_test_job_123.json
registry/: list-test-service.json  persistence-test.json  test-service.json
scripts/: prepare_release.sh  release.sh  run_test_audit.sh  start_services.sh  status_services.sh  stop_services.sh  test_audit.py  test_clean_install.sh
services/: __init__.py
tests/: conftest.py  memory_leak_detection.py  test_audit.py  test_error_recovery.py  (+3 more)
(+130 files in other folders)
