[project]
name = "ytarchive"
version = "0.1.0"
description = "Personal YouTube content archiving tool with microservices architecture"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi~=0.111.0",
    "uvicorn~=0.24.0",
    "httpx~=0.25.2",
    "pydantic~=2.7.0",
    "pydantic-settings~=2.2.0",
    "click~=8.1.7",
    "yt-dlp~=2023.11.16",
    "google-api-python-client~=2.108.0",
    "google-auth-httplib2~=0.1.1",
    "google-auth-oauthlib~=1.1.0",
    "python-dateutil~=2.8.2",
    "toml~=0.10.2",
    "structlog~=23.2.0",
    "rich~=13.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest~=7.4.3",
    "pytest-asyncio~=0.21.1",
    "pytest-cov~=4.1.0",
    "pytest-mock~=3.12.0",
    "black~=23.11.0",
    "ruff~=0.1.6",
    "mypy~=1.7.1",
    "pre-commit~=3.5.0",
    "httpx~=0.25.2",  # Also needed for testing
]

[project.scripts]
ytarchive = "cli.main:cli"

[tool.setuptools]
packages = ["cli", "services"]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::PendingDeprecationWarning:starlette.formparsers",
]
